[tool.poetry]
name = "x-liked-photos-export"
version = "0.1.0"
description = "A simple tool that allows you download all your liked photos from X (Twitter)."
authors = ["jokelbaf <60827680+JokelBaf@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
aiohttp = "^3.10.0"
rookiepy = "^0.5.2"
tqdm = "^4.66.4"
types-tqdm = "^4.66.0.20240417"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
